feat: add charts, signal monitoring, downsampling, and restructure shared types

--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "date-fns": "^4.1.0",
     "hono": "^4.7.0",
     "jose": "^6.0.0",
+    "lttb": "^0.0.1",
     "lucide-react": "^0.470.0",
     "nuqs": "^2.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
     "tailwind-merge": "^3.0.0",
+    "uplot": "^1.6.32",
     "ws": "^8.18.0",
     "zustand": "^5.0.0"
   },
