feat: add budget alerts, metrics API expansion, infra hardening, and UI improvements
- Budget alerts: DB schema, server routes, and client UI for daily budget monitoring
- Metrics API: cache savings, model comparison, error summary, dynamic profiles endpoints
- Signal evaluator: refactor evaluation logic and simplify tests
- Infra: loki retention, otel memory limiter + health check, prometheus self-scraping
- Client: productivity page, session histogram, dynamic profile filter, improved error display

--- a/config/otel-collector-config.yaml
+++ b/config/otel-collector-config.yaml
@@ -7,9 +7,17 @@ receivers:
         endpoint: 0.0.0.0:4318
 
 processors:
+  memory_limiter:
+    check_interval: 1s
+    limit_mib: 200
+    spike_limit_mib: 50
   batch:
     timeout: 5s
     send_batch_size: 1000
+
+extensions:
+  health_check:
+    endpoint: 0.0.0.0:13133
 
 exporters:
   prometheus:
@@ -23,12 +31,13 @@ exporters:
     endpoint: "http://loki:3100/loki/api/v1/push"
 
 service:
+  extensions: [health_check]
   pipelines:
     metrics:
       receivers: [otlp]
-      processors: [batch]
+      processors: [memory_limiter, batch]
       exporters: [prometheus]
     logs:
       receivers: [otlp]
-      processors: [batch]
+      processors: [memory_limiter, batch]
       exporters: [loki]
