--- a/config/loki-config.yaml
+++ b/config/loki-config.yaml
@@ -24,7 +24,15 @@ schema_config:
         prefix: index_
         period: 24h
 
+compactor:
+  working_directory: /loki/compactor
+  compaction_interval: 10m
+  retention_enabled: true
+  retention_delete_delay: 2h
+  retention_delete_worker_count: 150
+
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
   max_query_length: 721h
+  retention_period: 720h
