--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -9,3 +9,9 @@ scrape_configs:
   - job_name: "otel-collector"
     static_configs:
       - targets: ["otel-collector:8889"]
+
+  - job_name: "loggist"
+    static_configs:
+      - targets: ["loggist:3000"]
+    metrics_path: "/api/health"
+    scrape_interval: 30s
